--- a/people.html
+++ b/people.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,19 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/people.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Noto+Serif:ital@1&display=swap"
         rel="stylesheet">
     <title>People</title>
 </head>
+
 <body>
     <header>
         <div id="header-container">
@@ -59,14 +67,19 @@
         <div class="first-header">
             <h1 id="first-header">Experience life in Jordan with the original people</h1>
         </div>
-        <div class="people" style="position: relative;top: 105px;">
-            <div class="table">
-                <div id="people">
+        <!-- <div id="peoplesection">
+                <div id="people1">
                 </div>
                 <div id="people2">
                 </div>
             </div>
+        </div> -->
+
+        <div id="people1">
+
+
         </div>
+
     </main>
     <div id="clear"></div>
     <footer>
@@ -122,4 +135,5 @@
     <script src="./js/people.js"></script>
     <script src="./js/animations.js"></script>
 </body>
+
 </html>
